<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vec_menu" />

    <TextView
        android:id="@+id/tvTitle"
        fontPath="fonts/Product Sans Bold.ttf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/Reproduzir"
        android:textColor="?attr/app_textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivMenu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <android.support.v7.widget.CardView
            android:id="@+id/cvArtistaFavorito"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/colorful_gradient"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/tvTitle1"
                    android:alpha="0.75"
                    android:padding="4dp"
                    app:srcCompat="@drawable/vec_artist" />

                <TextView
                    android:id="@+id/tvTitle1"
                    fontPath="fonts/Product Sans Bold.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/Seu_artista_favorito"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="10sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvAlbumFavorito"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/colorful_gradient"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/tvTitle2"
                    android:alpha="0.75"
                    android:padding="4dp"
                    app:srcCompat="@drawable/vec_album" />

                <TextView
                    android:id="@+id/tvTitle2"
                    fontPath="fonts/Product Sans Bold.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/Seu_album_favorito"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="10sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvPlaylistFavorito"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/colorful_gradient"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/tvTitle3"
                    android:alpha="0.75"
                    android:padding="4dp"
                    app:srcCompat="@drawable/vec_playlist_white" />

                <TextView
                    android:id="@+id/tvTitle3"
                    fontPath="fonts/Product Sans Bold.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/Sua_playlist_favorita"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="10sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>