<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/alpha"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/text_primary_light" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/parentLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/parent_back_sort_dialog"
        android:elevation="5dp"
        android:paddingTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/center"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RelativeLayout
            android:id="@+id/llPosition"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="16dp"
            android:background="@drawable/item_back_sort_dialog"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/llTitle"
            app:layout_constraintEnd_toStartOf="@id/center"

            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/vec_sort_position" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/posicao"
                    android:textAlignment="gravity"
                    android:textColor="?attr/app_textColorPrimary" />

            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/llFolder"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="16dp"
            android:background="@drawable/item_back_sort_dialog"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/llFavourites"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@id/center">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    app:srcCompat="@drawable/vec_folder_theme" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/Pastas"
                    android:textAlignment="gravity"
                    android:textColor="?attr/app_textColorPrimary" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llArtist"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="16dp"
            android:background="@drawable/item_back_sort_dialog"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/center"

            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:srcCompat="@drawable/vec_sort_artist" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/Artista"
                    android:textAlignment="gravity"
                    android:textColor="?attr/app_textColorPrimary" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llAlbum"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="16dp"
            android:background="@drawable/item_back_sort_dialog"

            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@id/center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:srcCompat="@drawable/vec_sort_album" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/Album"
                    android:textAlignment="gravity"
                    android:textColor="?attr/app_textColorPrimary" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llTitle"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="16dp"
            android:background="@drawable/item_back_sort_dialog"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/llArtist"

            app:layout_constraintEnd_toStartOf="@id/center"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:srcCompat="@drawable/vec_sort_title" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/Titulo"
                    android:textAlignment="gravity"
                    android:textColor="?attr/app_textColorPrimary" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llFavourites"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_margin="16dp"
            android:background="@drawable/item_back_sort_dialog"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/llAlbum"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toEndOf="@id/center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:srcCompat="@drawable/vec_sort_favourite" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/Favoritas"
                    android:textAlignment="gravity"
                    android:textColor="?attr/app_textColorPrimary" />
            </LinearLayout>

        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>